Changing Get-Teacher service to be by id instead of username
